@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-09-26T08:10:15Z",
-  "count_outdated" : 77,
-  "uniques_outdated" : 64,
+  "timestamp" : "2022-09-27T08:15:38Z",
+  "count_outdated" : 78,
+  "uniques_outdated" : 65,
   "count" : 85,
   "uniques" : 72,
   "clones" : [
-    {
-      "timestamp": "2022-09-13T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-09-14T00:00:00Z",
       "count": 1,
